--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
                 <div class=options></div>
             </div>
+            <div class = results>
+                <p class = correct>Correct:</p>
+                <p class = incorrect>Incorrect:</p>
+            </div>
 
         </div>
 
